# interpreter

./: .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  temp.txt
docs/: keywords.md  syntax.md
src/: main.c  main.cpp  main.tr
src/ast/: ast.cpp  ast.hpp  astPrinter.cpp  astPrinter.hpp
src/interpreter/: interpreter.cpp  interpreter.hpp  value.cpp  value.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/parser/: parser.cpp  parser.hpp
src/token/: token.cpp  token.h  token.hpp
